# Software-Engineering-for-Machine-Learning-Code

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  train.yml
configs/: cifar10_numpy.yaml  cifar10_pytorch.yaml  cifar10_tensorflow.yaml  regression_numpy.yaml  regression_pytorch.yaml  regression_tensorflow.yaml  sentiment_numpy.yaml  sentiment_pytorch.yaml  sentiment_tensorflow.yaml
mlops/: Dockerfile  docker-compose.yml  dvc.yaml
requirements/: base.txt  dev.txt  pytorch.txt  tensorflow.txt
results/: code_metrics.json  complexity_report.json  coverage_report.json  experiment_results.json
src/analysis/: code_metrics.py  complexity_analysis.py  test_coverage_report.py  visualization.py
src/common/: config.py  data_loader.py  logging_utils.py  metrics.py  reproducibility.py
src/numpy_impl/: layers.py  optimizers.py  train.py
src/numpy_impl/models/: cnn_cifar10.py  lstm_sentiment.py  mlp_regression.py
src/pytorch_impl/: datasets.py  train.py
src/pytorch_impl/models/: cnn_cifar10.py  lstm_sentiment.py  mlp_regression.py
src/tensorflow_impl/: datasets.py  train.py
tests/: conftest.py
tests/test_common/: test_data_loader.py  test_metrics.py  test_reproducibility.py
tests/test_integration/: test_pipeline_numpy.py  test_pipeline_pytorch.py  test_pipeline_tensorflow.py
tests/test_numpy/: test_layers.py  test_models.py  test_optimizers.py
tests/test_pytorch/: test_models.py  test_train.py
tests/test_tensorflow/: test_models.py  test_train.py
(+3 files in other folders)
